--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,10 @@
 $primary-color: #1c4d3d;
 $primary-black: #000000;
-$primary-white: #f5f5dc;
+$primary-white: #ffffff;
 $element-color: #a0c2b9;
 $element-color2: #d3f4d1;
 $primary-font: "SF Pro Regular";
+$text-sizeCof: 15;
 
 body {
   margin: 0%;
@@ -16,7 +17,8 @@ body {
 }
 
 header {
-  margin-top: 50px;
+  position: fixed;
+  padding: 50px 0;
   width: 100vw;
   height: 25px;
   .container {
@@ -31,20 +33,102 @@ header {
       display: flex;
       column-gap: 50px;
       .link {
+        background: none;
+        outline: none;
+        border: none;
         font-size: 18px;
         text-decoration: none;
         color: rgba($primary-color, $alpha: 0.5);
         font-family: "SF Pro Medium";
+        transition: all 1s;
       }
       .underlined {
         color: $primary-white;
+        transition: all 1s;
       }
-      .underlined::before {
-        content: "-";
-        width: 100px;
-        height: 100px;
+      .underlined::after {
+        content: " ";
+        display: block;
+        position: relative;
+        width: 40%;
+        height: 2px;
+        border-radius: 10px;
         background-color: #d3f4d1;
+        margin: 2px auto;
+        transition: all 1s;
       }
     }
   }
+}
+
+main {
+  width: 100vw;
+  height: max-content;
+  .container {
+    width: 90%;
+    height: auto;
+    margin: 0% auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.fully {
+  width: 100%;
+  height: max-content;
+}
+
+.home {
+  margin-top: 150px;
+  width: 100%;
+  height: 700px;
+  .aside1 {
+    width: 50%;
+    row-gap: 3vh;
+    .title {
+      font-size: calc(80vw / $text-sizeCof);
+      letter-spacing: 1%;
+      font-family: "SF Pro Bold";
+      margin: 0%;
+    }
+    .secText {
+      font-size: calc(26vw / $text-sizeCof);
+    }
+    .buttons {
+      width: 100%;
+      display: flex;
+      column-gap: 50px;
+      .button1 {
+        width: 20%;
+        height: 5vh;
+        color: $primary-black;
+        background-color: $element-color;
+        border: none;
+        border-radius: 10px;
+        font-family: "SF Pro Regular";
+        font-size: 22px;
+      }
+      .button2 {
+        display: flex;
+        font-family: "SF Pro Regular";
+        font-size: 22px;
+        color: $primary-white;
+        border: none;
+        outline: none;
+        background: none;
+        column-gap: 12px;
+        align-items: center;
+        img {
+          width: 50px;
+        }
+      }
+    }
+  }
+}
+.news {
+  height: 2000px;
+  width: 100%;
 }
