--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -85,6 +85,8 @@ main {
   margin-top: 150px;
   width: 100%;
   height: 700px;
+  display: flex;
+  flex-direction: row;
   .aside1 {
     width: 50%;
     row-gap: 3vh;
@@ -124,6 +126,62 @@ main {
         img {
           width: 50px;
         }
+      }
+    }
+  }
+  .aside2 {
+    .img1 {
+      z-index: -1;
+      position: absolute;
+      width: 40vw;
+      height: 40vw;
+      margin-top: -10vh;
+    }
+    .dec1 {
+      position: absolute;
+      z-index: -2;
+      width: 60vw;
+      height: 60vw;
+      top: 0%;
+      right: 0%;
+    }
+    .logos {
+      img {
+        width: 7vw;
+        height: 7vw;
+        position: absolute;
+        filter: blur(3px);
+      }
+      img:hover {
+        filter: none;
+      }
+      .tiktok {
+        margin-left: 30vw;
+        margin-top: 25vw;
+        transform: rotate(20deg);
+      }
+      .discord {
+        margin-left: 24vw;
+        margin-top: 13vw;
+        transform: rotate(-30deg);
+      }
+      .instagram {
+        margin-left: 0vw;
+        margin-top: 25vw;
+        transform: rotate(5deg);
+      }
+      .facebook {
+        margin-left: 30vw;
+        margin-top: 0vw;
+        transform: rotate(20deg);
+      }
+      .telegram {
+        margin-left: 9vw;
+        margin-top: 11vw;
+        transform: rotate(0deg);
+      }
+      .youtube {
+        transform: rotate(-15deg);
       }
     }
   }
