--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -103,6 +103,7 @@ main {
       width: 100%;
       display: flex;
       column-gap: 50px;
+      height: 5vh;
       .button1 {
         width: 20%;
         height: 5vh;
@@ -111,12 +112,12 @@ main {
         border: none;
         border-radius: 10px;
         font-family: "SF Pro Regular";
-        font-size: 22px;
+        font-size: calc(20vw / $text-sizeCof / 1.2);
       }
       .button2 {
         display: flex;
         font-family: "SF Pro Regular";
-        font-size: 22px;
+        font-size: calc(20vw / $text-sizeCof / 1.2);
         color: $primary-white;
         border: none;
         outline: none;
@@ -150,10 +151,11 @@ main {
         width: 7vw;
         height: 7vw;
         position: absolute;
-        filter: blur(3px);
+        filter: blur(calc(0.2vw));
       }
       img:hover {
         filter: none;
+        scale: 2;
       }
       .tiktok {
         margin-left: 30vw;
